@@ -1,0 +1,24 @@
+virtualHW.version = "$vmhwversion"
+scsi0.present = "FALSE"
+scsi0.virtualDev = "lsilogic"
+memsize = "$mem"
+Ethernet0.virtualDev = "vlance"
+Ethernet0.present = "TRUE"
+Ethernet0.connectionType = "bridged"
+displayName = "$hostname $arch"
+guestOS = "$guestos"
+priority.grabbed = "normal"
+priority.ungrabbed = "normal"
+powerType.powerOff = "hard"
+powerType.powerOn = "hard"
+powerType.suspend = "hard"
+powerType.reset = "hard"
+floppy0.present = "FALSE"
+#set $i = -1
+#for $disk in $disks
+    #set $i = $i + 1
+    #set $bus = $i / 2
+    #set $id = $i % 2
+ide${bus}:${id}.present = "TRUE"
+ide${bus}:${id}.fileName = "${disk.filename}"
+#end for
